decaf-compiler/samples/lex/comment.decaf.out

*** Error line 16.
"all done!"
^^^^^^^^^^^
*** syntax error

